Update zh_CN.lang (#15)

--- a/src/main/resources/assets/goodgenerator/lang/zh_CN.lang
+++ b/src/main/resources/assets/goodgenerator/lang/zh_CN.lang
@@ -17,7 +17,7 @@ essentiaCell.2.name=大师源质扩散单元
 essentiaCell.3.name=宗师源质扩散单元
 essentiaHatch.0.name=源质输入仓
 speedingPipe.0.name=高速管道方块
-yottaFluidTankCasing.0.name=YOTTank机械方块
+yottaFluidTankCasing.0.name=YOT机械方块
 yottaFluidTankCell.0.name=流体单元方块T1
 yottaFluidTankCell.1.name=流体单元方块T2
 yottaFluidTankCell.2.name=流体单元方块T3
@@ -28,6 +28,8 @@ yottaFluidTankCell.6.name=流体单元方块T7
 yottaFluidTankCell.7.name=流体单元方块T8
 yottaFluidTankCell.8.name=流体单元方块T9
 yottaFluidTankCell.9.name=流体单元方块T10
+supercriticalFluidTurbineCasing.0.name=超临界流体涡轮
+pressureResistantWalls.0.name=耐压墙
 
 #Items
 item.radiationProtectionPlate.name=防辐射板
@@ -68,6 +70,18 @@ item.rodCompressedPlutoniumDepleted4.name=枯竭四联燃料棒(浓缩钚)
 item.rodCompressedPlutonium.name=燃料棒(浓缩钚)
 item.rodCompressedPlutonium2.name=二联燃料棒(浓缩钚)
 item.rodCompressedPlutonium4.name=四联燃料棒(浓缩钚)
+item.rodLiquidUraniumDepleted.name=枯竭燃料棒(激发铀)
+item.rodLiquidUraniumDepleted2.name=枯竭二联燃料棒(激发铀)
+item.rodLiquidUraniumDepleted4.name=枯竭四联燃料棒(激发铀)
+item.rodLiquidUranium.name=燃料棒(激发铀)
+item.rodLiquidUranium2.name=二联燃料棒(激发铀)
+item.rodLiquidUranium4.name=四联燃料棒(激发铀)
+item.rodLiquidPlutoniumDepleted.name=枯竭燃料棒(激发钚)
+item.rodLiquidPlutoniumDepleted2.name=枯竭二联燃料棒(激发钚)
+item.rodLiquidPlutoniumDepleted4.name=枯竭四联燃料棒(激发钚)
+item.rodLiquidPlutonium.name=燃料棒(激发钚)
+item.rodLiquidPlutonium2.name=二联燃料棒(激发钚)
+item.rodLiquidPlutonium4.name=四联燃料棒(激发钚)
 item.advancedFuelRod.name=高级燃料棒(空)
 item.fluidCore.0.name=流体存储核心T1
 item.fluidCore.1.name=流体存储核心T2
@@ -94,6 +108,9 @@ naquadriaMass.tooltip.0=什么?
 EssentiaHatch.tooltip.0=手持源质罐子右键以设置过滤.
 EssentiaHatch.tooltip.1=空手右键以重置过滤.
 fuelrod.tooltip.0=耐久：%s/%s
+fuelrodheat.tooltip.0=具有与铀相同的发热量
+fuelrodheat.tooltip.1=发热量是铀的%s倍
+fuelrodheat.tooltip.2=具有MOX特性
 depletedfuelrod.tooltip.0=枯竭
 YOTTankCell.tooltip.0=容量：
 hatchTier.tooltip.0=仓室等级：
@@ -217,12 +234,18 @@ gui.YOTTank.2=已存储：
 tile.recipe.naquadah_reactor=大型硅岩反应堆
 tile.naquadah_fuel_refine_factory=硅岩燃料精炼厂
 tile.neutron_activator=中子活化器
+tile.extreme_heat_exchanger=超级热交换机
 value.naquadah_reactor=基础输出电压：
 value.naquadah_fuel_refine_factory.0=要求等级
 value.naquadah_fuel_refine_factory.1=线圈
 value.neutron_activator.0=最低中子动能：
 value.neutron_activator.1=最高中子动能：
 value.neutron_activator.2= MeV
+value.extreme_heat_exchanger.0=最大热流体输入：
+value.extreme_heat_exchanger.1=最大工质输入：
+value.extreme_heat_exchanger.2=最大热工质输出：
+value.extreme_heat_exchanger.3=最大过热工质输出：
+value.extreme_heat_exchanger.4=阈值：
 
 #TecTech Structure Info
 FuelRefineFactory.hint.0=8x力场约束玻璃
@@ -251,7 +274,7 @@ UniversalChemicalFuelEngine.hint.6=1 - 维护仓
 UniversalChemicalFuelEngine.hint.7=2 - 消声仓
 UniversalChemicalFuelEngine.hint.8=3 - 输入仓
 UniversalChemicalFuelEngine.hint.9=4 - 动力仓
-UniversalChemicalFuelEngine.hint.10=不支持TecTech动力仓
+UniversalChemicalFuelEngine.hint.10=支持TecTech动力仓
 LargeEssentiaGenerator.hint.0=25x任意源质扩散单元
 LargeEssentiaGenerator.hint.1=4x琥珀砖块
 LargeEssentiaGenerator.hint.2=24x奥术石砖
@@ -265,18 +288,25 @@ NeutronActivator.hint.3=4x高速管道方块
 NeutronActivator.hint.4=7x洁净不锈钢机械方块(至少！)
 NeutronActivator.hint.5=1 - 输入仓/输入总线/洁净不锈钢机械方块
 NeutronActivator.hint.6=2 - 输出仓/输出总线/维护仓/中子加速器/中子传感器/洁净不锈钢机械方块
-YOTTank.hint.0=47xYOTTank机械方块(至少！)
+YOTTank.hint.0=47xYOT机械方块(至少！)
 YOTTank.hint.1=16x钢框架
 YOTTank.hint.2=16x同级硼玻璃方块(每层)
 YOTTank.hint.3=9x流体单元方块(每层)
-YOTTank.hint.4=1 - 输入仓/YOTTank机械方块
-YOTTank.hint.5=2 - 维护仓/YOTTank机械方块
-YOTTank.hint.6=3 - 输出仓
+YOTTank.hint.4=1 - 输入仓/YOT机械方块
+YOTTank.hint.5=2 - 维护仓/YOT机械方块
+YOTTank.hint.6=3 - 输出仓/YOT仓
+ExtremeHeatExchanger.hint.0=25x强化钨钢机械方块(至少！)
+ExtremeHeatExchanger.hint.1=1 - 输入仓(蒸馏水或其他工质)
+ExtremeHeatExchanger.hint.2=2 - 输出仓(超临界蒸汽/过热蒸汽/蒸汽或其他热工质
+ExtremeHeatExchanger.hint.3=3 - 输入仓(热流体)
+ExtremeHeatExchanger.hint.4=4 - 输出仓(冷流体)
+ExtremeHeatExchanger.hint.5=任意机械方块 - 维护仓
 
 #Chat
 largeessentiagenerator.chat= 已安装!
 essentiahatch.chat.0=成功锁定为 %s.
 essentiahatch.chat.1=已清除.
+yothatch.chat.0=存储优先级设为 %s.
 
 #Achievement
 achievement.gt.blockmachines.nag=大型硅岩反应堆
