--- a/src/main/resources/assets/goodgenerator/lang/en_US.lang
+++ b/src/main/resources/assets/goodgenerator/lang/en_US.lang
@@ -30,6 +30,9 @@ yottaFluidTankCell.8.name=Fluid Cell Block T9
 yottaFluidTankCell.9.name=Fluid Cell Block T10
 supercriticalFluidTurbineCasing.0.name=SC Turbine Casing
 pressureResistantWalls.0.name=Pressure Resistant Wall
+preciseUnitCasing.0.name=Precise Electronic Unit Casing MK-I
+preciseUnitCasing.1.name=Precise Electronic Unit Casing MK-II
+preciseUnitCasing.2.name=Precise Electronic Unit Casing MK-III
 
 #Items
 item.radiationProtectionPlate.name=Radiation Proof Plate
@@ -300,6 +303,12 @@ ExtremeHeatExchanger.hint.2=2 - Output hatch for SC Steam/SH Steam/Steam
 ExtremeHeatExchanger.hint.3=3 - Input hatch for hot fluid
 ExtremeHeatExchanger.hint.4=4 - Output hatch for cold fluid
 ExtremeHeatExchanger.hint.5=Any Casing - Maintenance Hatch
+PreciseAssembler.hint.0=At least 12x Precise Electronic Unit Casings
+PreciseAssembler.hint.1=12x Tungstensteel Frame Box
+PreciseAssembler.hint.2=42x Reinforced Glasses
+PreciseAssembler.hint.3=21x Machine Casing (Not Machine Hull!)
+PreciseAssembler.hint.4=1 - Any Hatch/Precise Electronic Unit Casing
+PreciseAssembler.hint.5=Support TecTech Energy Hatches!
 
 #Chat
 largeessentiagenerator.chat= Installed!
