--- a/src/main/resources/assets/goodgenerator/lang/en_US.lang
+++ b/src/main/resources/assets/goodgenerator/lang/en_US.lang
@@ -321,6 +321,8 @@ yothatch.chat.0=Set storage priority to %s.
 yothatch.chat.1=Set to %s mode
 yottank.chat.0=Clear the lock filter
 yottank.chat.1=Lock to %s
+preciseassembler.chat.0=Precise Mode
+preciseassembler.chat.1=Normal Mode
 
 #Achievement
 achievement.gt.blockmachines.nag=Large Naquadah Reactor
