--- a/src/main/resources/assets/miscutils/lang/en_US.lang
+++ b/src/main/resources/assets/miscutils/lang/en_US.lang
@@ -3384,3 +3384,6 @@ sleep.event.good=You slept well and now feel much better.
 sleep.event.wellrested=You feel really well rested.
 sleep.event.downsides=The downsides of life no longer effect you.
 item.miscutils:magicfeather.name=Magical Feather
+
+//Added 10/02/22
+item.BasicGenericChemItem.14.name=Solid-Acid Catalyst
