--- a/src/main/resources/assets/gregtech/lang/en_US.lang
+++ b/src/main/resources/assets/gregtech/lang/en_US.lang
@@ -186,6 +186,8 @@ GT5U.config.interface.TooltipVerbosity=Tooltip verbosity (See details)
 GT5U.config.interface.TooltipVerbosity.tooltip=How verbose should GregTech interface tooltips be?\n0: No tooltips\n1: One line tooltips only\n2: Normal tooltips [DEFAULT]\n3+: Extended tooltips
 GT5U.config.interface.TooltipShiftVerbosity=Tooltip verbosity (LSHIFT Down)
 GT5U.config.interface.TooltipShiftVerbosity.tooltip=How verbose should GregTech interface tooltips be when LSHIFT is held down?\n0: No tooltips\n1: One line tooltips only\n2: Normal tooltips\n3+: Extended tooltips [DEFAULT]
+GT5U.config.interface.CircuitsOrder=Circuits Order (See details)
+GT5U.config.interface.CircuitsOrder.tooltip=What is the order of the circuits when they are selected?\nFill in the Unique Identifier of the circuits.\nFor example: gregtech:gt.integrated_circuit
 GT5U.config.preference=Client Preference
 GT5U.config.preference.mInputBusInitialFilter=Input Bus Initial Input Filter Status
 GT5U.config.preference.mInputBusInitialFilter.tooltip=Whether Input busses enable the input filter upon placed\nDoes not affect busses placed by others\nDoes not affect existing busses
