--- a/src/main/resources/assets/goodgenerator/lang/en_US.lang
+++ b/src/main/resources/assets/goodgenerator/lang/en_US.lang
@@ -132,7 +132,7 @@ fuelrodheat.tooltip.2=Has Mox Behaviour
 depletedfuelrod.tooltip.0=Depleted
 YOTTankCell.tooltip.0=Capacity:
 hatchTier.tooltip.0=Hatch Tier:
-huiCircuit.tooltip.0=§b93015 TFlop/s§r
+huiCircuit.tooltip.0=§b93015 TFlops§r
 huiCircuit.tooltip.1=§e76M Processor Units§r
 huiCircuit.tooltip.2=§aInvalidate RSA§r
 huiCircuit.tooltip.3=§c56th Mersenne Prime§r
