--- a/src/main/resources/assets/detravscannermod/lang/en_US.lang
+++ b/src/main/resources/assets/detravscannermod/lang/en_US.lang
@@ -30,8 +30,9 @@ tooltip.detrav.scanner.durability=Durability:
 tooltip.detrav.scanner.range=Chunks:
 tooltip.detrav.scanner.usage.0=Right click on rock for prospecting current chunk!
 tooltip.detrav.scanner.usage.1=Right click on bedrock for prospecting fluids!
-tooltip.detrav.scanner.usage.2=Right click for scanning!
-tooltip.detrav.scanner.usage.3=Double click any entry to invert the background color!
+tooltip.detrav.scanner.usage.2=Right click on air for scanning!
+tooltip.detrav.scanner.usage.3=Shift + Right click on air to switch modes!
+tooltip.detrav.scanner.usage.4=Double click any entry to invert the background color!
 tooltip.detrav.scanner.success.chance=Chance of a successful scan:
 tooltip.detrav.scanner.distance.0=next to you (0 chunks away), close to you (1-2)
 tooltip.detrav.scanner.distance.1=at medium range (3-5), at long range (6-8), far away (9+)
