--- a/src/main/resources/assets/goodgenerator/lang/zh_CN.lang
+++ b/src/main/resources/assets/goodgenerator/lang/zh_CN.lang
@@ -127,7 +127,7 @@ naquadahMass.tooltip.0=远不够纯.
 enrichedNaquadahMass.tooltip.0=一种强烈的满足感.
 naquadriaMass.tooltip.0=什么?
 EssentiaHatch.tooltip.0=手持源质罐子右键以设置过滤.
-EssentiaHatch.tooltip.1=空手右键以重置过滤.
+EssentiaHatch.tooltip.1=空手Shift右键以重置过滤.
 fuelrod.tooltip.0=耐久：%s/%s
 fuelrodheat.tooltip.0=具有与铀相同的发热量
 fuelrodheat.tooltip.1=发热量是铀的%s倍
