--- a/src/main/resources/assets/tectech/lang/zh_CN.lang
+++ b/src/main/resources/assets/tectech/lang/zh_CN.lang
@@ -1,5 +1,6 @@
 #Creative Tab Name
-itemGroup.TecTech=泛银河泰克科技有限公司
+itemGroup.TecTech=TecTech
+itemGroup.EM=TecTech元物质
 
 #Blocks
 tile.quantumStuff.name=量子物质
@@ -39,8 +40,8 @@ item.em.definitionScanStorage.desc.3=---意外终止---
 
 item.em.constructable.name=多方块机器蓝图
 item.em.constructable.desc.0=触发可构造界面
-item.em.constructable.desc.1=显示多方块结构细节,
-item.em.constructable.desc.2=只可在多方块控制器上使用.
+item.em.constructable.desc.1=显示多方块结构全息投影,
+item.em.constructable.desc.2=请对多方块控制器使用.
 item.em.constructable.desc.3=(在创造模式下潜行右键可直接构造)
 item.em.constructable.desc.4=堆叠数量影响等级/模式/类型
 
@@ -172,8 +173,8 @@ gt.blockmachines.transformer.ha.tier.14.name=OpV高电流变压器
 gt.blockmachines.transformer.ha.tier.14.desc=MAX -> OPV (用软锤右击以反转)
 
 #Hatches
-tt.base.emhatch.desc.0=最大元物质组数:
-tt.base.emhatch.desc.1=最大容量:
+tt.base.emhatch.desc.0=最大元物质组数：
+tt.base.emhatch.desc.1=最大容量：
 tt.base.emhatch.desc.2=在这个仓室不处于多方块结构
 tt.base.emhatch.desc.3=中时，在后侧、上侧或下侧放
 tt.base.emhatch.desc.4=置溢流仓以提供过载保护。
@@ -788,6 +789,7 @@ gt.blockmachines.debug.tt.genny.name=Debug发电机
 gt.blockmachines.debug.tt.genny.desc.0=凭空而生的能量
 gt.blockmachines.debug.tt.genny.desc.1=一个无限的能源生产/消耗设备
 gt.blockmachines.debug.tt.genny.desc.2=我只是想要一个...
+gt.blockmachines.debug.tt.genny.desc.3=使用螺丝刀将其切换为激光模式.
 gt.blockmachines.debug.tt.writer.name=Debug结构打印机
 gt.blockmachines.debug.tt.writer.desc.0=扫描周围的方块
 gt.blockmachines.debug.tt.writer.desc.1=打印多方块非实体的结构样式编码
@@ -798,20 +800,10 @@ gt.blockmachines.debug.tt.writer.desc.2=ABC轴沿机器正面确定
 tt.keyword.ID=ID
 #Example: 32EU at 1A
 tt.keyword.at= 
-#These are Thaumcraft aspects
-tt.keyword.Air=风
-tt.keyword.Earth=地
-tt.keyword.Fire=火
-tt.keyword.Water=水
-tt.keyword.Order=秩序
-tt.keyword.Entropy=混沌
-tt.keyword.Primal=元始
-tt.keyword.Aspect=要素
-tt.keyword.CLASS=CLASS
-tt.keyword.NAME=名字
-tt.keyword.CHARGE=充能
-tt.keyword.COLORLESS=无色
-tt.keyword.MASS=物质
+
+tt.keyphrase.Hint_Details=提示细节
+
+#debug boom
 tt.keyword.BOOM=BOOM!
 tt.keyword.Destination=目标
 tt.keyword.Weight=质量
@@ -834,10 +826,6 @@ tt.keyword.Status=状态
 tt.keyword.Content=内含
 tt.keyword.PacketHistory=封包记录
 
-tt.keyphrase.LIFE_TIME=寿命
-tt.keyphrase.CARRIES_COLOR=有色
-tt.keyphrase.Hint_Details=提示细节
-tt.keyphrase.At_current_energy_level=在当前能级
 #Used when 0 Elemental Matter Stacks
 tt.keyphrase.No_Stacks=空
 tt.keyphrase.Contains_EM=存储元物质
@@ -871,7 +859,391 @@ tt.keyphrase.Average_IO_(max)=电压I/O(最大)
 tt.keyphrase.Average_IO_max=电压I/O 最大
 tt.keyphrase.Amperage_IO_(max)=电流I/O(最大)
 tt.keyphrase.Side_capabilities=辅助功能
+tt.keyphrase.Ass_line_recipe=装配线合成表
 
 #OpenTurrets compatibility
 tile.turretHeadEM.name=元物质炮塔
 tile.turretBaseEM.name=元物质炮塔基座
+
+#EM scan result
+tt.keyword.scan.depth=深度
+tt.keyword.scan.class=种类
+tt.keyword.scan.name=名称
+tt.keyword.scan.symbol=符号
+
+tt.keyword.scan.mass=质量
+tt.keyword.scan.count=粒子数
+tt.keyword.scan.amount=物质的量
+tt.keyword.scan.energy=能量
+tt.keyword.scan.energyLevel=能级
+tt.keyword.scan.charge=电荷
+tt.keyword.scan.life_mult=寿命系数
+tt.keyword.scan.half_life=半衰期
+tt.keyword.scan.life_time=寿命
+tt.keyword.scan.age=元物质衰变期
+tt.keyphrase.scan.at_current_energy_level=在当前能级
+tt.keyword.scan.color=色荷
+tt.keyword.scan.colorless=无色荷
+tt.keyword.scan.colored=有色荷
+
+tt.keyword.short.mass=M
+tt.keyword.short.count=Qty
+tt.keyword.short.amount=Qty
+tt.keyword.short.energy=E
+tt.keyword.short.energyLevel=EL
+tt.keyword.short.charge=C
+tt.keyword.short.time=T
+
+tt.keyword.unit.mass=eV/c²
+tt.keyword.unit.massFlux=eV/c²s
+tt.keyword.unit.count=
+tt.keyword.unit.mol=mol
+tt.keyword.unit.itemMols=item(s)
+tt.keyword.unit.mbMols=mb
+tt.keyword.unit.energy=eV
+tt.keyword.unit.charge=e
+tt.keyword.unit.time=s
+tt.keyword.unit.tick=t
+#that the thing wont decay
+tt.keyword.stable=不衰变
+
+#EM types
+tt.keyword.Primitive=原始
+tt.keyword.Element=元素
+tt.keyword.Atom=原子
+tt.keyword.Isotope=同位素
+tt.keyword.Boson=玻色子
+tt.keyword.Fermion=费米子
+tt.keyword.GaugeBoson=规范玻色子
+tt.keyword.Meson=介子
+tt.keyword.Baryon=重子
+tt.keyword.Tetraquark=四夸克粒子
+tt.keyword.Pentaquark=五夸克粒子
+tt.keyword.Hexaquark=六夸克粒子
+tt.keyword.Hadron=强子
+tt.keyword.Neutrino=中微子
+tt.keyword.Quark=夸克
+tt.keyword.ScalarBoson=标量玻色子
+#em definitions
+tt.keyword.PrimitiveNBTERROR=NBT错误
+tt.keyword.PrimitiveNULLPOINTER=空指针
+tt.keyword.PrimitiveSpace=空间
+tt.keyword.PrimitivePresence=存在
+tt.keyword.PrimitiveMass=物质
+tt.keyword.PrimitiveDarkMass=暗物质
+tt.keyword.PrimitiveEnergy=能量
+tt.keyword.PrimitiveDarkEnergy=暗能量
+tt.keyword.PrimitiveMagic=魔法
+tt.keyword.PrimitiveAntimagic=反魔法
+tt.keyword.Gluon=胶子
+tt.keyword.Photon=光子
+tt.keyword.Weak0=Z玻色子
+tt.keyword.WeakPlus=W+玻色子
+tt.keyword.WeakMinus=W-玻色子
+tt.keyword.Proton=质子
+tt.keyword.AntiProton=反质子
+tt.keyword.Neutron=中子
+tt.keyword.AntiNeutron=反中子
+tt.keyword.Lepton=轻子
+tt.keyword.Electron=电子
+tt.keyword.Muon=μ子
+tt.keyword.Tauon=τ子
+tt.keyword.Positron=正电子
+tt.keyword.Antimuon=反μ子
+tt.keyword.Antitauon=反τ子
+tt.keyword.ElectronNeutrino=电子中微子
+tt.keyword.MuonNeutrino=μ子中微子
+tt.keyword.TauonNeutrino=τ子中微子
+tt.keyword.PositronNeutrino=正电子中微子
+tt.keyword.AntimuonNeutrino=反μ子中微子
+tt.keyword.AntitauonNeutrino=反τ子中微子
+tt.keyword.QuarkUp=上夸克
+tt.keyword.QuarkCharm=粲夸克
+tt.keyword.QuarkTop=顶夸克
+tt.keyword.QuarkDown=下夸克
+tt.keyword.QuarkStrange=奇夸克
+tt.keyword.QuarkBottom=底夸克
+tt.keyword.QuarkAntiUp=反上夸克
+tt.keyword.QuarkAntiCharm=反粲夸克
+tt.keyword.QuarkAntiTop=反顶夸克
+tt.keyword.QuarkAntiDown=反下夸克
+tt.keyword.QuarkAntiStrange=反奇夸克
+tt.keyword.QuarkAntiBottom=反底夸克
+tt.keyword.Higgs=希格斯玻色子
+#These are Thaumcraft aspects
+tt.keyword.Air=风
+tt.keyword.Earth=地
+tt.keyword.Fire=火
+tt.keyword.Water=水
+tt.keyword.Order=秩序
+tt.keyword.Entropy=混沌
+tt.keyword.Chaos=Chaos
+
+tt.keyword.Primal=元始
+tt.keyword.Aspect=要素
+
+tt.element.Neutronium=中子
+tt.element.Hydrogen=氢
+tt.element.Helium=氦
+tt.element.Lithium=锂
+tt.element.Beryllium=铍
+tt.element.Boron=硼
+tt.element.Carbon=碳
+tt.element.Nitrogen=氮
+tt.element.Oxygen=氧
+tt.element.Fluorine=氟
+tt.element.Neon=氖
+tt.element.Sodium=钠
+tt.element.Magnesium=镁
+tt.element.Aluminium=铝
+tt.element.Silicon=硅
+tt.element.Phosphorus=磷
+tt.element.Sulfur=硫
+tt.element.Chlorine=氯
+tt.element.Argon=氩
+tt.element.Potassium=钾
+tt.element.Calcium=钙
+tt.element.Scandium=钪
+tt.element.Titanium=钛
+tt.element.Vanadium=钒
+tt.element.Chromium=铬
+tt.element.Manganese=锰
+tt.element.Iron=铁
+tt.element.Cobalt=钴
+tt.element.Nickel=镍
+tt.element.Copper=铜
+tt.element.Zinc=锌
+tt.element.Gallium=镓
+tt.element.Germanium=锗
+tt.element.Arsenic=砷
+tt.element.Selenium=硒
+tt.element.Bromine=溴
+tt.element.Krypton=氪
+tt.element.Rubidium=铷
+tt.element.Strontium=锶
+tt.element.Yttrium=钇
+tt.element.Zirconium=锆
+tt.element.Niobium=铌
+tt.element.Molybdenum=钼
+tt.element.Technetium=锝
+tt.element.Ruthenium=钌
+tt.element.Rhodium=铑
+tt.element.Palladium=钯
+tt.element.Silver=银
+tt.element.Cadmium=镉
+tt.element.Indium=铟
+tt.element.Tin=锡
+tt.element.Antimony=锑
+tt.element.Tellurium=碲
+tt.element.Iodine=碘
+tt.element.Xenon=氙
+tt.element.Caesium=铯
+tt.element.Barium=钡
+tt.element.Lanthanum=镧
+tt.element.Cerium=铈
+tt.element.Praseodymium=镨
+tt.element.Neodymium=钕
+tt.element.Promethium=钷
+tt.element.Samarium=钐
+tt.element.Europium=铕
+tt.element.Gadolinium=钆
+tt.element.Terbium=铽
+tt.element.Dysprosium=镝
+tt.element.Holmium=钬
+tt.element.Erbium=铒
+tt.element.Thulium=铥
+tt.element.Ytterbium=镱
+tt.element.Lutetium=镥
+tt.element.Hafnium=铪
+tt.element.Tantalum=钽
+tt.element.Tungsten=钨
+tt.element.Rhenium=铼
+tt.element.Osmium=锇
+tt.element.Iridium=铱
+tt.element.Platinum=铂
+tt.element.Gold=金
+tt.element.Mercury=汞
+tt.element.Thallium=铊
+tt.element.Lead=铅
+tt.element.Bismuth=铋
+tt.element.Polonium=钋
+tt.element.Astatine=砹
+tt.element.Radon=氡
+tt.element.Francium=钫
+tt.element.Radium=镭
+tt.element.Actinium=锕
+tt.element.Thorium=钍
+tt.element.Protactinium=镤
+tt.element.Uranium=铀
+tt.element.Neptunium=镎
+tt.element.Plutonium=钚
+tt.element.Americium=镅
+tt.element.Curium=锔
+tt.element.Berkelium=锫
+tt.element.Californium=锎
+tt.element.Einsteinium=锿
+tt.element.Fermium=镄
+tt.element.Mendelevium=钔
+tt.element.Nobelium=锘
+tt.element.Lawrencium=铹
+tt.element.Rutherfordium=
+tt.element.Dubnium=
+tt.element.Seaborgium=
+tt.element.Bohrium=
+tt.element.Hassium=
+tt.element.Meitnerium=鿏
+tt.element.Darmstadtium=
+tt.element.Roentgenium=
+tt.element.Copernicium=鿔
+tt.element.Nihonium=鿭
+tt.element.Flerovium=
+tt.element.Moscovium=镆
+tt.element.Livermorium=
+tt.element.Tennessine=鿬
+tt.element.Oganesson=鿫
+
+tt.element.AntiNeutronium=反中子
+tt.element.AntiHydrogen=反氢
+tt.element.AntiHelium=反氦
+tt.element.AntiLithium=反锂
+tt.element.AntiBeryllium=反铍
+tt.element.AntiBoron=反硼
+tt.element.AntiCarbon=反碳
+tt.element.AntiNitrogen=反氮
+tt.element.AntiOxygen=反氧
+tt.element.AntiFluorine=反氟
+tt.element.AntiNeon=反氖
+tt.element.AntiSodium=反钠
+tt.element.AntiMagnesium=反镁
+tt.element.AntiAluminium=反铝
+tt.element.AntiSilicon=反硅
+tt.element.AntiPhosphorus=反磷
+tt.element.AntiSulfur=反硫
+tt.element.AntiChlorine=反氯
+tt.element.AntiArgon=反氩
+tt.element.AntiPotassium=反钾
+tt.element.AntiCalcium=反钙
+tt.element.AntiScandium=反钪
+tt.element.AntiTitanium=反钛
+tt.element.AntiVanadium=反钒
+tt.element.AntiChromium=反铬
+tt.element.AntiManganese=反锰
+tt.element.AntiIron=反铁
+tt.element.AntiCobalt=反钴
+tt.element.AntiNickel=反镍
+tt.element.AntiCopper=反铜
+tt.element.AntiZinc=反锌
+tt.element.AntiGallium=反镓
+tt.element.AntiGermanium=反锗
+tt.element.AntiArsenic=反砷
+tt.element.AntiSelenium=反硒
+tt.element.AntiBromine=反溴
+tt.element.AntiKrypton=反氪
+tt.element.AntiRubidium=反铷
+tt.element.AntiStrontium=反锶
+tt.element.AntiYttrium=反钇
+tt.element.AntiZirconium=反锆
+tt.element.AntiNiobium=反铌
+tt.element.AntiMolybdenum=反钼
+tt.element.AntiTechnetium=反锝
+tt.element.AntiRuthenium=反钌
+tt.element.AntiRhodium=反铑
+tt.element.AntiPalladium=反钯
+tt.element.AntiSilver=反银
+tt.element.AntiCadmium=反镉
+tt.element.AntiIndium=反铟
+tt.element.AntiTin=反锡
+tt.element.AntiAntimony=反锑
+tt.element.AntiTellurium=反碲
+tt.element.AntiIodine=反碘
+tt.element.AntiXenon=反氙
+tt.element.AntiCaesium=反铯
+tt.element.AntiBarium=反钡
+tt.element.AntiLanthanum=反镧
+tt.element.AntiCerium=反铈
+tt.element.AntiPraseodymium=反镨
+tt.element.AntiNeodymium=反钕
+tt.element.AntiPromethium=反钷
+tt.element.AntiSamarium=反钐
+tt.element.AntiEuropium=反铕
+tt.element.AntiGadolinium=反钆
+tt.element.AntiTerbium=反铽
+tt.element.AntiDysprosium=反镝
+tt.element.AntiHolmium=反钬
+tt.element.AntiErbium=反铒
+tt.element.AntiThulium=反铥
+tt.element.AntiYtterbium=反镱
+tt.element.AntiLutetium=反镥
+tt.element.AntiHafnium=反铪
+tt.element.AntiTantalum=反钽
+tt.element.AntiTungsten=反钨
+tt.element.AntiRhenium=反铼
+tt.element.AntiOsmium=反锇
+tt.element.AntiIridium=反铱
+tt.element.AntiPlatinum=反铂
+tt.element.AntiGold=反金
+tt.element.AntiMercury=反汞
+tt.element.AntiThallium=反铊
+tt.element.AntiLead=反铅
+tt.element.AntiBismuth=反铋
+tt.element.AntiPolonium=反钋
+tt.element.AntiAstatine=反砹
+tt.element.AntiRadon=反氡
+tt.element.AntiFrancium=反钫
+tt.element.AntiRadium=反镭
+tt.element.AntiActinium=反锕
+tt.element.AntiThorium=反钍
+tt.element.AntiProtactinium=反镤
+tt.element.AntiUranium=反铀
+tt.element.AntiNeptunium=反镎
+tt.element.AntiPlutonium=反钚
+tt.element.AntiAmericium=反镅
+tt.element.AntiCurium=反锔
+tt.element.AntiBerkelium=反锫
+tt.element.AntiCalifornium=反锎
+tt.element.AntiEinsteinium=反锿
+tt.element.AntiFermium=反镄
+tt.element.AntiMendelevium=反钔
+tt.element.AntiNobelium=反锘
+tt.element.AntiLawrencium=反铹
+tt.element.AntiRutherfordium=反
+tt.element.AntiDubnium=反
+tt.element.AntiSeaborgium=反
+tt.element.AntiBohrium=反
+tt.element.AntiHassium=反
+tt.element.AntiMeitnerium=反鿏
+tt.element.AntiDarmstadtium=反
+tt.element.AntiRoentgenium=反
+tt.element.AntiCopernicium=反鿔
+tt.element.AntiNihonium=反鿭
+tt.element.AntiFlerovium=反
+tt.element.AntiMoscovium=反镆
+tt.element.AntiLivermorium=反
+tt.element.AntiTennessine=反鿬
+tt.element.AntiOganesson=反鿫
+
+tt.IUPAC.n=0
+tt.IUPAC.u=1
+tt.IUPAC.b=2
+tt.IUPAC.t=3
+tt.IUPAC.q=4
+tt.IUPAC.p=5
+tt.IUPAC.h=6
+tt.IUPAC.s=7
+tt.IUPAC.o=8
+tt.IUPAC.e=9
+tt.IUPAC.N=〇
+tt.IUPAC.U=一
+tt.IUPAC.B=二
+tt.IUPAC.T=三
+tt.IUPAC.Q=四
+tt.IUPAC.P=五
+tt.IUPAC.H=六
+tt.IUPAC.S=七
+tt.IUPAC.O=八
+tt.IUPAC.E=九
+tt.IUPAC.ium=元素
+tt.IUPAC.Anti=反
+tt.keyword.Weird=*
+
+tt.chat.debug.generator=激光模式：%s
