Update zh_CN.lang (#202)

--- a/src/main/resources/assets/gregtech/lang/zh_CN.lang
+++ b/src/main/resources/assets/gregtech/lang/zh_CN.lang
@@ -85,9 +85,10 @@ GTPP.time.days=天
 GTPP.time.weeks=周
 GTPP.time.months=月
 
-
-
-
+//Steam MultiBlock Tooltips
+GTPP.MBTT.SteamHatch=蒸汽仓
+GTPP.MBTT.SteamInputBus=输入总线(蒸汽)
+GTPP.MBTT.SteamOutputBus=输出总线(蒸汽)
 
 
 
@@ -220,5 +221,3 @@ achievement.gt.blockmachines.gtpp.multimachine.flotationcell=工业浮选机
 achievement.gt.blockmachines.gtpp.multimachine.flotationcell.desc=[AL]捡起这个物品以在NEI内查看合成表
 achievement.gt.blockmachines.gtpp.multimachine.isamill=艾萨研磨机
 achievement.gt.blockmachines.gtpp.multimachine.isamill.desc=[AL]捡起这个物品以在NEI内查看合成表
-
-
