--- a/src/main/resources/assets/miscutils/lang/zh_CN.lang
+++ b/src/main/resources/assets/miscutils/lang/zh_CN.lang
@@ -55,7 +55,7 @@ item.MiscUtils.material.dustCryotheum.name=凛冰之尘
 item.MiscUtils.material.rodBlizz.name=暴雪棒
 item.MiscUtils.material.dustBlizz.name=暴雪粉
 
-//==============
+//============= 'miscutils' is Case Sensitive Here, unsure why
 tile.miscutils.fluid.pyrotheum.name=烈焰之炽焱
 tile.miscutils.fluid.cryotheum.name=极寒之凛冰
 tile.miscutils.fluid.ender.name=谐振熔融末影珍珠
@@ -2287,24 +2287,24 @@ item.itemCellHypogen.name=海珀珍单元
 tile.Block of Hypogen.name=海珀珍块
 tile.Hypogen Frame Box.name=海珀珍框架
 
-item.itemIngotArceusAlloy2B.name=阿塞俄斯合金2B锭
-item.itemHotIngotArceusAlloy2B.name=热阿塞俄斯合金2B锭
-item.itemDustArceusAlloy2B.name=阿塞俄斯合金2B粉
-item.itemDustTinyArceusAlloy2B.name=小撮阿塞俄斯合金2B粉
-item.itemDustSmallArceusAlloy2B.name=小堆阿塞俄斯合金2B粉
-item.itemNuggetArceusAlloy2B.name=阿塞俄斯合金2B粒
-item.itemPlateArceusAlloy2B.name=阿塞俄斯合金2B板
-item.itemPlateDoubleArceusAlloy2B.name=双重阿塞俄斯合金2B板
-item.itemBoltArceusAlloy2B.name=阿塞俄斯合金2B螺栓
-item.itemRodArceusAlloy2B.name=阿塞俄斯合金2B杆
-item.itemRodLongArceusAlloy2B.name=长阿塞俄斯合金2B杆
-item.itemRingArceusAlloy2B.name=阿塞俄斯合金2B环
-item.itemScrewArceusAlloy2B.name=阿塞俄斯合金2B螺丝
-item.itemRotorArceusAlloy2B.name=阿塞俄斯合金2B转子
-item.itemGearArceusAlloy2B.name=阿塞俄斯合金2B齿轮
-item.itemCellArceusAlloy2B.name=阿塞俄斯合金2B单元
-tile.Block of Arceus Alloy 2B.name=阿塞俄斯合金2B块
-tile.Arceus Alloy 2B Frame Box.name=阿塞俄斯合金2B框架
+item.itemIngotArceusAlloy2B.name=阿尔宙斯合金2B锭
+item.itemHotIngotArceusAlloy2B.name=热阿尔宙斯合金2B锭
+item.itemDustArceusAlloy2B.name=阿尔宙斯合金2B粉
+item.itemDustTinyArceusAlloy2B.name=小撮阿尔宙斯合金2B粉
+item.itemDustSmallArceusAlloy2B.name=小堆阿尔宙斯合金2B粉
+item.itemNuggetArceusAlloy2B.name=阿尔宙斯合金2B粒
+item.itemPlateArceusAlloy2B.name=阿尔宙斯合金2B板
+item.itemPlateDoubleArceusAlloy2B.name=双重阿尔宙斯合金2B板
+item.itemBoltArceusAlloy2B.name=阿尔宙斯合金2B螺栓
+item.itemRodArceusAlloy2B.name=阿尔宙斯合金2B杆
+item.itemRodLongArceusAlloy2B.name=长阿尔宙斯合金2B杆
+item.itemRingArceusAlloy2B.name=阿尔宙斯合金2B环
+item.itemScrewArceusAlloy2B.name=阿尔宙斯合金2B螺丝
+item.itemRotorArceusAlloy2B.name=阿尔宙斯合金2B转子
+item.itemGearArceusAlloy2B.name=阿尔宙斯合金2B齿轮
+item.itemCellArceusAlloy2B.name=阿尔宙斯合金2B单元
+tile.Block of Arceus Alloy 2B.name=阿尔宙斯合金2B块
+tile.Arceus Alloy 2B Frame Box.name=阿尔宙斯合金2B框架
 
 item.itemIngotChromaticGlass.name=彩色玻璃锭
 item.itemHotIngotChromaticGlass.name=热彩色玻璃锭
@@ -3247,6 +3247,7 @@ interaction.voidexcess.disabled=禁用过量销毁
 
 interaction.separateBusses.enabled=独立输入总线
 interaction.separateBusses.disabled=联合输入总线
+
 //Added 29/11/21
 
 item.BasicNuclearChemItem.0.name=铀渣混合物
@@ -3376,3 +3377,13 @@ item.hydrogenchloridemix.name=氢氯混合物
 
 //Added 19/01/22
 item.SunnariumBit.name=阳光化合物粒
+
+//Added 29/01/22
+sleep.event.okay=你睡得很香,现在感觉不错.
+sleep.event.good=你睡得很香,现在感觉好极了.
+sleep.event.wellrested=你得到了充分的休息.
+sleep.event.downsides=debuff不再困扰着你.
+item.miscutils:magicfeather.name=魔法羽毛
+
+//Added 10/02/22
+item.BasicGenericChemItem.14.name=固体酸催化剂
