--- a/src/main/resources/assets/gregtech/lang/en_US.lang
+++ b/src/main/resources/assets/gregtech/lang/en_US.lang
@@ -132,8 +132,8 @@ GT5U.machines.stalled_vent.tooltip.2=§7point this machine's steam
 GT5U.machines.stalled_vent.tooltip.3=§7vent towards an empty space.
 GT5U.machines.stalled_vent.tooltip.extended=§7Progress was lost, but not
 GT5U.machines.stalled_vent.tooltip.extended.1=§7the recipe's output.
-GT5U.machines.oreprocessor=§eRunning Mode: §b%s
-GT5U.machines.oreprocessor.void=§eVoid Stone Dust: §b%s
+GT5U.machines.oreprocessor=§eRunning Mode: %s §cTime: %s s
+GT5U.machines.oreprocessor.void=§eVoid Stone Dust: %s
 
 GT5U.recipe_filter.representation_slot.tooltip=Click with a machine to set filter
 
