Add UHV Soldering Alloy for Endgame Recipes (#196)
* Added Endgame Soldering Alloy

- Adder recipe for Mutated Living Solder, an endgame soldering alloy meant for the bioware circuit line and content after it;
- Added a new, very expensive catalyst for this recipe, which favors the usage of Awakened Draconium Coils to prevent losing durability on the catalyst;
- Changed the Chemical Plant so that using Awakened Draconium Coils with Tungstensteel Pipe Casings removes the chance of consuming catalyst durability.

* Lowered Recipe Energy Tier by 1

--- a/src/main/resources/assets/miscutils/lang/en_US.lang
+++ b/src/main/resources/assets/miscutils/lang/en_US.lang
@@ -3389,3 +3389,6 @@ item.miscutils:magicfeather.name=Magical Feather
 
 //Added 10/02/22
 item.BasicGenericChemItem.14.name=Solid-Acid Catalyst
+
+//Added 30/05/22
+item.BasicGenericChemItem.15.name=Infinite Mutation Catalyst
